Bug 500068 thundersomething addon constantly crashes tb 2.0.0.22 final (win32, winxp) [@ nsCharTraits<unsigned short>::length - nsPref::SetUnicharPref] r=dveditz